# VLM-cross-scene-portrait-matcher

./: .gitignore  Makefile  README.md  __azurite_db_table__.json  app.py  config.env  config.ini  demo.ipynb  download_weights.bat  front.py  jobs.py  launch.py  main.py  photolink.spec  pyproject.toml  python_launcher.c  qss.py  requirements.txt  test.iss  windows.iss  windows_runtime_hook.py
assets/: config.ini
florence/: florence.py  gradio_helper.py  notebook_utils.py  ov_florence2_helper.py
helpers/: debug.sh  package.sh  setup.sh  windows.sh
helpers/requirements/: devel.txt
photomatcher/: CHANGELOG  LICENSE  README.md  README.rst  pyproject.toml
photomatcher/src/photomatcher/: __main__.py  app.py  classifier.py  enums.py  front.py  utils.py  worker.py
photomatcher/src/photomatcher/model/: sface.py  yunet.py
photomatcher/src/photomatcher/resources/: config.env
src/photolink/: __init__.py
src/photolink/models/: __init__.py  edgeface.py  exceptions.py  facemesh.py  facetransformer.py  fastreid.py  florence.py  geometry.py  kosmos.py  notebook_utils.py  scrfd.py  sface.py  yolo_seg.py  yolov11.py  yoloworld.py  yunet.py
src/photolink/pipeline/: __init__.py  app.py  front.py  jobs.py  loading.py  main.py  qss.py  settings.py
src/photolink/server/: __init__.py  client.py  model_server.py  service.py  worker.py
src/photolink/utils/: download.py  dropbox_client.py  duplicate.py  enums.py  function.py  image_loader.py  size.py
src/photolink/workers/: __init__.py  dp2_functions.py  draw.py  functions.py  jobs.py  monitor.py  worker.py
