[build-system]
requires = ["hatchling", "cmake"]
build-backend = "hatchling.build"

[project]
name = "PhotolinkML"
version = "0.0.1" # should be dynamic later on
description = "Photolink application"
requires-python = ">=3.9, <3.12"
authors = [
    { name = "Philip Cho", email = "chophilip21@gmail.com" },
    { name = "Alinstein Jose", email = "alinsteinjose@gmail.com" },
]

[project.optional-dependencies]
devel = [
    "pyside6",
    "pycairo",
    "packaging",
    "hdbscan",
    "opencv-python",
    "nuitka",
    "loguru",
    "swig",
    "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["src/photolink"]

[tool.hatch.build.targets.sdist]
include = [
    "helpers/requirements/devel.txt",
    "helpers/requirements/test.txt",
    "README.md",
]