[build-system]
requires = ["hatchling", "cmake"]
build-backend = "hatchling.build"

[project]
name = "PhotolinkML"
version = "0.1.2" # should be dynamic later on
description = "Photolink application"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "Philip Cho", email = "chophilip21@gmail.com" },
]

[project.optional-dependencies]
devel = [
    "pyside6",
    "pycairo",
    "packaging",
    "hdbscan",
    "opencv-python",
    "pillow",
    "nuitka",
    "loguru",
    "swig",
    "isort",
    "google-api-python-client",
    "nmslib-metabrainz",
    "gdown",
    "onnxruntime",
    "coremltools",
]

[tool.hatch.build.targets.wheel]
packages = ["src/photolink"]

[tool.hatch.build.targets.sdist]
include = [
    "helpers/requirements/devel.txt",
    "helpers/requirements/test.txt",
    "README.md",
]